[package]
name = "null-terminated-str"
version = "0.1.4"
edition = "2021"
rust-version = "1.63"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = """
FFI-friendly utf-8 string, enabling const null-terminated str and caching
of the non-terminated string to avoid frequent allocation.
"""
repository = "https://github.com/NobodyXu/null-terminated-str"

keywords = ["ffi", "string", "c-str"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.144", optional = true }

[dev-dependencies]
serde_test = "1.0.144"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
